# citadel-workspace

./: .dockerignore  .env  .env.example  .gitignore  .gitmodules  .memory.jsonl  .prettierignore  .windsurfrules  ARCHITECTURE.md  AUG4_REVIEW.md  CLAUDE.md  CODEOWNERS  COMMIT_PUSH_SCRIPTS.md  Cargo.toml  DATASTRUCTURES.md  DEC26-OFFICE-HIERARCHY-TRACKING.md  DISCONNECT-BUG.md  EVENT_COMMUNICATION.md  EVENT_IMPLEMENTATION.md  EXIT_VS_SIGNOUT_IMPLEMENTATION.md  IMPLEMENTATION_STEPS.md  LICENSE  LIVE_DOC_TEST_REPORT.md  LIVE_DOC_UI_IMPROVEMENTS_TEST_REPORT.md  MULTI_USER_TEST_REPORT_PARTIAL.md  MVP.md  NEXT_STEPS_P2P.md  NOTES.md  NOTES.md.save  P2P_3WAY_TEST_RESULTS.md  P2P_BASIC_TEST_REPORT.md  P2P_COMPREHENSIVE_TEST_REPORT.md  P2P_COMPREHENSIVE_TEST_REPORT_PARTIAL.md  P2P_FINAL_TEST_RESULTS.md  P2P_FIX_TEST_REPORT.md  P2P_ISOURNOTIFICATION_FIX_TEST_REPORT.md  P2P_MESSAGE_PERSISTENCE_TEST_REPORT.md  P2P_MESSAGING_BUG_TEST_REPORT.md  P2P_MESSAGING_TEST_REPORT.md  P2P_REGISTRATION_UI_FIX_TEST_REPORT.md  (+52 more)
.archive/: .env  .env.sample  .eslintrc  (+10 more)
citadel-workspace-internal-service/: Cargo.toml  build.rs
citadel-workspace-internal-service/src/: main.rs
citadel-workspace-server-kernel/: BACKEND_MIGRATION_PROOF.md  BACKEND_USAGE_DEMO.md  Cargo.toml  SERVER-KERNEL-CLEANUP.md  cargo_check_output.json
citadel-workspace-server-kernel/src/: commands.rs  kernel.rs  lib.rs  main.rs  structs.rs
citadel-workspace-server-kernel/src/handlers/: domain_ops.rs  member.rs  mod.rs  office.rs  permissions.rs  query.rs  room.rs  transaction.rs  workspace.rs
citadel-workspace-server-kernel/src/handlers/domain/: core.rs  entity.rs  entity_ops.rs  mod.rs  node_ops.rs  office_ops.rs  operations_trait.rs  permission_ops.rs  room_ops.rs  server_ops.rs  transaction_ops.rs  tree_validator.rs  user_ops.rs  workspace_entity.rs  workspace_ops.rs
citadel-workspace-server-kernel/src/handlers/domain/async_ops/: async_domain_ops.rs  async_entity_ops.rs  async_node_ops.rs  async_office_ops.rs  async_permission_ops.rs  async_room_ops.rs  async_transaction_ops.rs  async_user_ops.rs  async_workspace_ops.rs  mod.rs
citadel-workspace-server-kernel/src/handlers/domain/functions/: domain_entity.rs  mod.rs  office.rs  permissions.rs  room.rs  user.rs  workspace.rs
citadel-workspace-server-kernel/src/kernel/: async_kernel.rs  backend.rs  command_processor.rs  core.rs  initialization.rs  member_operations.rs  mod.rs  network.rs  rate_limiter.rs  transaction.rs  user_management.rs
citadel-workspace-server-kernel/src/kernel/command_processor/: async_process_command.rs  member_commands.rs  mod.rs  office_commands.rs  room_commands.rs  workspace_commands.rs
citadel-workspace-server-kernel/src/kernel/domain/: mod.rs  ops.rs  permissions.rs
citadel-workspace-server-kernel/src/kernel/transaction/: async_transactions.rs  backend_ops_simple.rs  mod.rs  rbac.rs  read.rs  write.rs
citadel-workspace-server-kernel/src/tests/: mod.rs  permissions_test.rs  workspace_tests.rs
citadel-workspace-server-kernel/tests/: admin_check_test.rs  admin_operations_test.rs  async_kernel_connection_test.rs  backend_proof_test.rs  basic_permission_test.rs  custom_role_test.rs  domain_membership_test.rs  error_handling_test.rs  integration_test.rs  list_nodes_cycle_test.rs  member_command_processing_test.rs  member_domain_operations_test.rs  member_integration_test.rs  member_lifecycle_test.rs  member_operations_test.rs  member_test.rs  office_operations_test.rs  office_room_inheritance_test.rs  permission_escalation_test.rs  permission_inheritance_test.rs  permission_operations_test.rs  permissions_test.rs  role_based_permissions_test.rs  role_operations_test.rs  room_operations_test.rs  simple_backend_proof_test.rs  user_methods_test.rs  workspace_crud_test.rs  workspace_inheritance_test.rs  workspace_loading_test.rs  workspace_office_integration_test.rs  workspace_permissions_test.rs  workspace_tests.rs
citadel-workspace-server-kernel/tests/common/: Cargo.toml  integration_test_utils.rs  member_test_utils.rs  mod.rs  permission_test_utils.rs  permissions_test_utils.rs  workspace_test_utils.rs
citadel-workspace-server-kernel/tests/common/src/: async_test_helpers.rs  integration_test_utils.rs  member_test_utils.rs  mock_backend.rs  permission_test_utils.rs  permissions_test_utils.rs  workspace_test_utils.rs
citadel-workspace-types/: Cargo.toml  build.rs
citadel-workspace-types/bindings/: Domain.ts  DomainPermissions.ts  GroupMessage.ts  ListType.ts  MetadataField.ts  MetadataValue.ts  NestingRule.ts  NodeEntityType.ts  Office.ts  Permission.ts  PermissionEndowOperation.ts  Room.ts  TreeNode.ts  TreeSchema.ts  UserRole.ts  Workspace.ts  WorkspaceMetadata.ts  WorkspaceProtocolRequest.ts  WorkspaceProtocolResponse.ts
citadel-workspace-types/src/: lib.rs  structs.rs
src-tauri/: .gitignore  .rustc_info.json  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: base.json  default.json
src-tauri/icons/: icon.icns
src-tauri/prisma/: dev.db  dev.db-journal  schema.prisma
src-tauri/prisma-cli/: Cargo.toml
src-tauri/prisma/migrations/20230818091812_sessions/: migration.sql
src-tauri/src/: db.rs  lib.rs  main.rs  state.rs  structs.rs  tcp_conn_opener.rs  types.rs
src-tauri/src/commands/: clear_all_kv.rs  connect.rs  del_kv.rs  disconnect.rs  download_file.rs  get_all_kv.rs  get_all_peers.rs  get_kv.rs  get_registration.rs  get_session.rs  list_all_peers.rs  list_known_servers.rs  list_registered_peers.rs  local_db_clear_all_kv.rs  local_db_delete_kv.rs  local_db_get_all_kv.rs  local_db_get_kv.rs  local_db_set_kv.rs  message.rs  mod.rs  open_connection.rs  peer_connect.rs  peer_disconnect.rs  peer_register.rs  register.rs  send_file.rs  set_kv.rs  workspace_request.rs
src-tauri/src/helpers/: mod.rs  types.rs
src-tauri/src/lib/: mod.rs
src-tauri/src/server_kernel_commands/: mod.rs
src-tauri/src/server_kernel_commands/requests/: mod.rs
src-tauri/src/server_kernel_commands/responses/: mod.rs
src-tauri/src/tests/: mod.rs  type_interop_tests.rs
src-tauri/src/util/: local_db.rs  mod.rs  window_event_handler.rs
(+415 files in other folders)
