[workspace]
members = [
    "citadel-workspace-server-kernel",
    "citadel-workspace-internal-service",
    "src-tauri",
]
resolver = "2"

[workspace.dependencies]
structopt = { version = "0.3.26" }
tokio = { version = "1.28.1", features = ["full"] }
citadel-internal-service = { git = "https://github.com/Avarok-Cybersecurity/citadel-internal-service/" }
citadel_sdk = { version = "^0.13.0" }
citadel_types = { version = "^0.13.0" }
citadel_logging = { version = "^0.13.0" }
parking_lot = { version = "0.12" }
lazy_static = { version = "1.4.0" }
uuid = { version = "1.15" }