[workspace]
members = [
    "citadel-workspace-server-kernel",
    "citadel-workspace-internal-service",
    "citadel-workspace-types",
    "src-tauri",
]
resolver = "2"

[workspace.dependencies]
# Workspace-specific packages
citadel-workspace-server-kernel = { path = "./citadel-workspace-server-kernel" }
citadel-workspace-internal-service = { path = "./citadel-workspace-internal-service" }
citadel-workspace-types = { path = "./citadel-workspace-types" }

# Secondary packages
citadel-internal-service = { git = "https://github.com/Avarok-Cybersecurity/citadel-internal-service/", branch = "feat/request_cids" }
citadel-internal-service-test-common = { git = "https://github.com/Avarok-Cybersecurity/citadel-internal-service/", branch = "feat/request_cids" }
citadel-internal-service-types = { git = "https://github.com/Avarok-Cybersecurity/citadel-internal-service/", branch = "feat/request_cids" }
citadel-internal-service-connector = { git = "https://github.com/Avarok-Cybersecurity/citadel-internal-service/", branch = "feat/request_cids" }

# Avarok deps
citadel_sdk = { git = "https://github.com/Avarok-Cybersecurity/Citadel-Protocol", branch = "cw-debug" }
citadel_types = { git = "https://github.com/Avarok-Cybersecurity/Citadel-Protocol", branch = "cw-debug" }
citadel_logging = { git = "https://github.com/Avarok-Cybersecurity/Citadel-Protocol", branch = "cw-debug" }

# Tauri plugins
tauri = { version = "2.4.1" }
tauri-plugin-shell = { version = "2.2.1" }
tauri-plugin-log = { version = "2.4.0" }
tauri-build = { version = "2.1.1" }

# Generic dependencies
structopt = { version = "0.3.26" }
tokio = { version = "1.44.1", features = ["full"] }
tokio-util = { version = "0.7.14" }
parking_lot = { version = "0.12" }
lazy_static = { version = "1.5.0" }
uuid = { version = "1.16" }
serde = { version = "1.0.219" }
serde_json = { version = "1.0.140" }
futures = { version = "0.3.31" }
async-trait = { version = "0.1.88" }
rstest = { version = "0.25.0" }
bincode = "1.3.3"
rocksdb = "0.21.0"
chrono = { version = "0.4.34", features = ["serde"] }
