[package]
name = "citadel-workspace-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
deadlock-detection = ["parking_lot/deadlock_detection", "parking_lot", "lazy_static"]

[[bin]]
name = "citadel-workspace-service"
path = "src/main.rs"

[dependencies]
structopt = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }
citadel-internal-service = { workspace = true }
citadel_sdk = { workspace = true }
citadel_types = { workspace = true }
citadel_logging = { workspace = true }
parking_lot = { workspace = true, optional = true }
lazy_static = { workspace = true, optional = true }