[package]
name = "citadel-workspace-server-kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# localhost-testing = ["citadel_sdk/localhost-testing"]
# vendored = ["citadel-internal-service/vendored"]

[[bin]]
name = "citadel-workspace-server-kernel"
path = "src/main.rs"

[dependencies]
structopt = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }
citadel-internal-service = { workspace = true }
citadel_sdk = { workspace = true, features = ["sql"]}
citadel_types = { workspace = true }
citadel-workspace-types = { workspace = true }
citadel_logging = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
async-trait = { workspace = true }
rstest = { workspace = true }
futures = { workspace = true }
toml = "0.8"

[dev-dependencies]
citadel_sdk = { workspace = true, features = ["localhost-testing"] }
citadel-internal-service-test-common = { workspace = true }
citadel-internal-service-types = { workspace = true }
citadel-internal-service-connector = { workspace = true }