[package]
name = "citadel-workspace-server-kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# localhost-testing = ["citadel_sdk/localhost-testing"]
# vendored = ["citadel-internal-service/vendored"]

[[bin]]
name = "citadel-workspace-server-kernel"
path = "src/main.rs"

[dependencies]
structopt = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }
citadel_sdk = { workspace = true, features = ["sql"] }
citadel_types = { workspace = true }
citadel-workspace-types = { workspace = true }
citadel_logging = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
async-trait = { workspace = true }
futures = { workspace = true }
bincode = "1.3.3"

# Extra dependencies
toml = "0.8"
clap = { version = "4.4", features = ["derive"] }
tokio-stream = "0.1"
log = "0.4"
auto_impl = "1.3.0"

tempfile = "3.10.1"
bcrypt = "0.17.0"
chrono = { workspace = true }

[dev-dependencies]
citadel_sdk = { workspace = true, features = ["localhost-testing", "multi-threaded"] }
citadel-internal-service = { path = "../citadel-internal-service/citadel-internal-service" }
citadel-internal-service-connector = { path = "../citadel-internal-service/citadel-internal-service-connector" }
citadel-internal-service-test-common = { path = "../citadel-internal-service/citadel-internal-service/tests/common" }
citadel-internal-service-types = { path = "../citadel-internal-service/citadel-internal-service-types" }
common = { path = "./tests/common", package = "citadel-workspace-server-kernel-test-common" }

rstest = { workspace = true }
bincode = { workspace = true }
