[package]
name = "citadel-workspace-types"
version = "0.1.0"
edition = "2021"

[dependencies]
citadel_sdk = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { workspace = true } # Added back with workspace inheritance

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html