[package]
name = "citadel_workspace"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-shell = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
citadel-internal-service-types = {version="0.1.0", git="https://github.com/Avarok-Cybersecurity/citadel-workspace-core.git", package="citadel-internal-service-types"}
citadel-internal-service-connector= {version="0.1.0", git="https://github.com/Avarok-Cybersecurity/citadel-workspace-core.git", package="citadel-internal-service-connector" }
tokio = { version = "1.28.2", features = ["net", "rt", "macros"] }
tokio-util = { version = "0.7.8", default-features = false }
citadel_logging = { version = "0.7.0", default-features = false }
uuid = { version = "1.3.4" }
futures = "0.3.28"
