[package]
name = "citadel_workspace"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
vendored = ["citadel-internal-service-connector/vendored"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
strum = { version = "0.26", features = ["derive"] }
strum_macros = "0.26"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-shell = { workspace = true }
citadel-internal-service-types = { workspace = true }
citadel-internal-service-connector = { workspace = true }
citadel-workspace-types = { workspace = true }
citadel_types = { workspace = true }
citadel_logging = { workspace = true }
tokio = { workspace = true, features = ["net", "rt", "macros"] }
tokio-util = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }
log = "0.4"
